[project]
name = "arc-solver"
version = "0.1.0"
description = "Local Docker agent solver for ARC-AGI tasks"
requires-python = ">=3.11"
dependencies = [
    "aiodocker>=0.21.0",
    "openai>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
